syntax = "proto3";

import "protobuf/user.proto";
option go_package = "protobuf/generated/user_group";

enum Roles {
    ADMIN = 0;
    USER = 1;
}

message UserGroup {
    uint32 group_id = 1 [json_name="group_id"];
    string group_name = 2 [json_name="group_name"];
    repeated Roles roles = 3;
    repeated User users = 4;
    string description = 16;
}